alterações de responsividade

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Meu Portfólio</title>
-    <link rel="icon" href="/imagens/pessoa.png">
+    <link rel="icon" href="/imagens/pessoa.ico">
 </head>
 
 <body>
     <!-- Menu -->
     <header class="cabecalho">  
-         <img class="cabecalho-logo" src="imagens/brilho.png" alt="brilhinho">
-         <h3 class="cabecalho-titulo">🪐 Luca Palumbo</h3>
+         <h3 class="cabecalho-titulo">🪐 Luca Palumbo 🛸</h3>
         <nav class="navegacao">
             <ul class="navegacao-lista">
                 <li class="navegacao-elemento"><a href="#sobre-mim">Sobre mim</a></li>
@@ -20,7 +19,7 @@
                 <li class="navegacao-elemento"><a href="#hobbies">Hobbies</a></li>
                 <li class="navegacao-elemento"><a href="#formacao">Formação</a></li>
                 <li class="navegacao-elemento"><a href="#projetos">Projetos</a></li>
-                <li class="navegacao-elemento"><a href="#contato"><span class="contato">Contato</span></a></li>
+                <li class="navegacao-elemento"><a href="#contato"><span>Contato</span></a></li>
             </ul>
         </nav>
     </header>
