readme atualizado e responsividade consertada

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <li class="navegacao-elemento"><a href="#hobbies">Hobbies</a></li>
                 <li class="navegacao-elemento"><a href="#formacao">Formação</a></li>
                 <li class="navegacao-elemento"><a href="#projetos">Projetos</a></li>
-                <li class="navegacao-elemento"><a href="#contato"><span>Contato</span></a></li>
             </ul>
+        <a class="navegacao-elemento" id="contato" href="#contato"><span>Contato</span></a>
         </nav>
     </header>
 
@@ -154,7 +154,7 @@
         <img class="telefone-imagem" src="imagens/telefone.jpg" alt="telefone vermelho com fio">
         <form class="contato-formulario">
             <h2 class="contato-titulo">Contato</h2>
-            <p>Quer entrar em contato comigo? Mande um e-mail e responderei o mais rápido possível</p>
+            <p>Deseja entrar em contato comigo? Mande-me um e-mail e responderei o mais rápido possível</p>
             <input class="contato-campo" id="Nome" type="text" placeholder="Nome" required>
             <input class="contato-campo" id="Email" type="email" placeholder="E-mail" required>
             <textarea class="contato-campo contato-campo-textarea" id="Mensagem" placeholder="Mensagem" required></textarea>
