--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Meu Portfólio</title>
-    <link rel="icon" href="/imagens/pessoa.ico">
+    <link rel="icon" href="imagens/pessoa.ico">
 </head>
 
 <body>
