--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <h3 class="cabecalho-titulo">🪐 Luca Palumbo 🛸</h3>
         <nav class="navegacao">
             <ul class="navegacao-lista">
-                <li class="navegacao-elemento"><a href="#sobre-mim">Sobre mim</a></li>
+                <li class="navegacao-elemento"><a href="#sobre-mim">Sobre</a></li>
                 <li class="navegacao-elemento"><a href="#habilidades">Habilidades</a></li>
                 <li class="navegacao-elemento"><a href="#hobbies">Hobbies</a></li>
                 <li class="navegacao-elemento"><a href="#formacao">Formação</a></li>
